--- a/STA440_Individual_Project.Rmd
+++ b/STA440_Individual_Project.Rmd
@@ -14,11 +14,11 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 
 ## Background
 
-Despite Major League Baseball being one of the largest and most popular professional sports leagues in America, recent criticisms have grown in regard to the pace of the game and its relative lack of action compared to other sports. In recent years, the game has seen the growth of the three outcome at-bat, meaning that many batters are trending towards either hitting homeruns, striking out, or walking (MLB.com, Three True Outcomes). This comes from batters prioritizing launch angle and the greater addition to expected runs contributed from homeruns than batted balls in play. Although these extra homeruns are exciting for fans, the number of strikeouts increasing has the opposite effect. With long games and increasingly rare action from batted balls in play, MLB has started looking into potential solutions to fix the pace of game dissatisfaction from fans.
+Despite Major League Baseball being one of the largest and most popular professional sports leagues in America, recent criticisms have grown in regard to the pace of the game and its relative lack of action compared to other sports. In recent years, the game has seen the growth of the three outcome at-bat, meaning that many batters are trending towards either hitting home runs, striking out, or walking (MLB.com, Three True Outcomes). This comes from batters prioritizing launch angle and the greater addition to expected runs contributed from home runs than batted balls in play. Although these extra home runs are exciting for fans, the number of strikeouts increasing has the opposite effect. With long games and increasingly rare action from batted balls in play, MLB has started looking into potential solutions to fix the pace of game dissatisfaction from fans.
 
-Already there are rules being added for the 2022 season in attempts to address the decrease in action, such as the elimination of the infield shift which was responsible for taking away many base hits by left-handed batters. MLB has also implemented a pitch clock in attempts to speed up the game. Still, much of the discussion about 'fixing baseball' has been made around the strike zone. Automated ball and strike calls seem to be where the game is headed, but there are also talks of changing the strike zone all together.
+Already there are rules being added for the 2023 season in attempts to address the decrease in action, such as the elimination of the infield shift which was responsible for taking away many base hits by left-handed batters. MLB has also introduced a pitch clock in attempts to speed up the game. Still, much of the discussion about 'fixing baseball' has been made around the strike zone. Automated ball and strike calls seem to be where the game is headed, but there are also talks of changing the strike zone all together.
 
-Changes to the strike zone have been made before in the past, with the last official update to the strike zone being in 1996 when it was defined as the "the midpoint between a batter's shoulders and the top of the uniform pants -- when the batter is in his stance and prepared to swing at a pitched ball -- and a point just below the kneecap" (MLB.com, Strikezone). Additionally, and especially with this indistinct wording, the strike zone as it has been called by umpires has shifted without updates to the rules. For example, from 2007 to 2017 umpires have narrowed but lengthened their strikes zones (Edwards 2018). But what associations does the strike zone have on batted balls in play?
+Changes to the strike zone have been made before in the past, with the last official update to the strike zone being in 1996 when it was defined as the "the midpoint between a batter's shoulders and the top of the uniform pants -- when the batter is in his stance and prepared to swing at a pitched ball -- and a point just below the kneecap" (MLB.com, Strike zone). Additionally, and especially with this indistinct wording, the strike zone as it has been called by umpires has shifted without updates to the rules. For example, from 2007 to 2017 umpires have narrowed but lengthened their strikes zones (Edwards 2018). But what associations does the strike zone have with batted balls in play?
 
 ## Research Questions
 
@@ -33,7 +33,7 @@ Separately, this analysis will also be looked at through the lens of the followi
 
 This analysis uses 2021 Statcast data from Bill Petti's `baseballr` package. This data contains pitch-level information, including a separate observation for each pitch during the season, including pre-season, regular season, and post-season games. In 2021, alone, this includes 797,290 pitches, each with 93 recorded variables. Statcast technology was introduced in all 30 MLB stadiums in 2015, and has since recorded information about each pitch, the game situation of that pitch, and other player/inning related context. Because this analysis focuses only on balls batted into play, this original dataset is filtered down greatly.
 
-First the daata was filtered to only include regular season and post-season games (excluding exhibition and Spring training games). This was done to eliminate practice games and other games that may not represent a true competitive game. Next, the data was filtered to only included batters with at least 50 at-bats in order to increase the consistency in the quality of at-bats. This was done by counting players with at least 50 at-bat ending events (Appendix A) recorded in the data, then filtering the data for only those players. By using this threshold I eliminate any players that were only called to the majors briefly or players that may not have been good/healthy enough to start frequently. Because I was only interested in comparing the odds of a successful batted ball given that the ball was put in play, I filtered for observations of type "X" which represent batted balls events. This also handled the issue of making sure I don't consider multiple strikes during an at-bat as it is inherently only possible for a batter to hit one pitch they face into play and it is not necessary to hit every strike faced. I also filtered for only high strikes, which were originally labeled to be in zone 1, 2, or 3, or low strikes, which were originally labeled to be in zone 7, 8, or 9. I did this because pitchers generally avoid trying to pitch down the middle as it is easier to hit, but also because I am strictly interested in the difference in the relationships between high and low strikes and the odds of a successful hit. In order to further focus on this goal, I also recoded the zone variable to refer only to the vertical location, with zones 1, 2, and 3 relabeled as high strikes and zones 7, 8, and 9 relabeled as low strikes. I also made the decision to filter for only plays where there was no infield shift. This choice was made with consideration for the fact that the infield shift will no longer be allowed in future seasons. Even though I am not attempting to predict for the future, my goal is still to observe the relationship between pitch location and the odds of a successful ball in play in a way that might be insightful to the possibility of future strikezone changes. With as much data as this still leaves me, I do not believe it will hinder my results and will better allow me to examine the relevant associations on against standard defenses. Lastly, I chose to filter out Eephus pitches (EP), knuckle balls (KN), and screwballs (KC) due to their rarity or inconsistent pitch movement. I also removed pitches labeled as "CS" as their occurrance was rare and it is not clear what type of pitch they represent (Visualization and detailed list of pitch types can be found in the Appendix B). Although fastballs recorded as "FA" also appear to be rare, I simply grouped these in with other types of fastballs. I also simplified pitch type to just fastballs (general fastballs, 4-seam fastballs, splitters/split fastballs, sinkers/2-seam fastballs, and cutters), changeups, and breaking balls (curveballs, knuckle curves, and sliders) as this is often how they are examined by MLB and I do not wish to oversaturate my model with different pitch types.
+First the data was filtered to only include regular season and post-season games (excluding exhibition and Spring training games). This was done to eliminate practice games and other games that may not represent a true competitive game. Next, the data was filtered to only included batters with at least 50 at-bats in order to increase the consistency in the quality of at-bats. This was done by counting players with at least 50 at-bat ending events (Appendix A) recorded in the data, then filtering the data for only those players. By using this threshold I eliminate any players that were only called to the majors briefly or players that may not have been good/healthy enough to start frequently. Because I was only interested in comparing the odds of a successful batted ball given that the ball was put in play, I filtered for observations of type "X" which represent batted balls events. This also handled the issue of making sure I don't consider multiple strikes during an at-bat as it is inherently only possible for a batter to hit one pitch they face into play and it is not necessary to hit every strike faced. I also filtered for only high strikes, which were originally labeled to be in zone 1, 2, or 3, or low strikes, which were originally labeled to be in zone 7, 8, or 9. I did this because pitchers generally avoid trying to pitch down the middle as it is easier to hit, but also because I am strictly interested in the difference in the relationships between high and low strikes and the odds of a successful hit. In order to further focus on this goal, I also recoded the zone variable to refer only to the vertical location, with zones 1, 2, and 3 relabeled as high strikes and zones 7, 8, and 9 relabeled as low strikes. I also made the decision to filter for only plays where there was no infield shift. This choice was made with consideration for the fact that the infield shift will no longer be allowed in future seasons. Even though I am not attempting to predict for the future, my goal is still to observe the relationship between pitch location and the odds of a successful ball in play in a way that might be insightful to the possibility of future strike zone changes. With as much data as this still leaves me, I do not believe it will hinder my results and will better allow me to examine the relevant associations against standard defenses. Lastly, I chose to filter out Eephus pitches (EP), knuckle balls (KN), and screwballs (KC) due to their rarity or inconsistent pitch movement. I also removed pitches labeled as "CS" as their occurrence was rare and it is not clear what type of pitch they represent (Visualization and detailed list of pitch types can be found in the Appendix B). Although fastballs recorded as "FA" also appear to be rare, I simply grouped these in with other types of fastballs. I also simplified pitch type to just fastballs (general fastballs, 4-seam fastballs, splitters/split fastballs, sinkers/2-seam fastballs, and cutters), changeups, and breaking balls (curveballs, knuckle curves, and sliders) as this is often how they are examined by MLB and I do not wish to oversaturate my model with different pitch types.
 
 
 
@@ -46,7 +46,7 @@ First the daata was filtered to only include regular season and post-season game
 
 ## Key Variables
 
-For this analysis, the outcome variable being used is the pitch-level batting average on balls in play (BABIP). This value is 1 if the at bat resulted in a ball hit in play that allowed the batter to get on base, and 0 otherwise. Something to note, however, is that in regard to the definition of BABIP according to MLB and as will be used in this analysis, a homerun is not included in 'balls in play' because it does not involve action by the defense. This is appropriate for this analysis because I am considering the greater context of producing action for fans, and balls in play requiring action by the defense help decrease the limitations of the three outcome at-bat.
+For this analysis, the outcome variable being used is the pitch-level batting average on balls in play (BABIP). This value is 1 if the at bat resulted in a ball hit in play that allowed the batter to get on base, and 0 otherwise. Something to note, however, is that in regard to the definition of BABIP according to MLB and as will be used in this analysis, a home run is not included in 'balls in play' because it does not involve action by the defense. This is appropriate for this analysis because I am considering the greater context of producing action for fans, and balls in play requiring action by the defense help decrease the limitations of the three outcome at-bat.
 
 The primary predictors of interest are whether the pitch was a high strike or a low strike. However, I also control for the type of pitch thrown (fastball, changeup, or breaking ball), the speed of the pitch when released by the pitcher (in mph), the side of the plate the batter stands on (left or right), the handedness of the pitcher (left or right), the batted ball type (ground ball, pop up, line drive, or fly ball), and the launch speed of the ball off the bat (in mph). I also considered including the projected distance the ball was hit, but as I include the type of batted ball which considers hit distance built in to the classification (eg. ground balls are hit into the dirt and have low distances and the only difference between a popup and a fly ball are the distance they travel), I did not think it would be ideal to include both variables. I chose to include batted ball type over distance because I believed that the type of hit may incorporate more information on the action required by the defense to make a play compared to distance alone. All variables included in the model were less than 1% missing after filtering the data as described above (Appendix C). Due to the low rates of missingness, I chose not to impute missing observations and records with missing data were dropped from the analysis.
 
@@ -99,12 +99,11 @@ statcast_data_filtered <- statcast_data_2021 %>%
                                     "Breaking ball" = "SL")) %>%
   mutate(pitch_type = factor(pitch_type, levels = c("Fastball", "Changeup", "Breaking ball"))) 
 
-#pitch_type != "FA", 
 ```
 
 ## EDA
 
-Because of the vague wording of the definition of the strikezone and the dependency the called strikezone has on the judgement of the umpire, I have included a plot displaying the X and Z coordinates of all high and low strikes relevant to this analysis. In this case, the x-axis refers to the horizontal distance of the pitch from the center of home plate (in ft) while the y-axis refers to the height of the pitch (in ft) as it crosses home plate. This plot helps us visualize the difference between high and low strikes as was observed in 2021. As there is no definitive cutoff for the top or bottom of the strikezone, understanding the observed heights of these strikes is important to understanding how pitch location may be related to balls in play. As is shown, the observed bottom of the strikezone appears to be slightly below 1.5 ft while the observed top of the strikezone appears to be slightly above 3.5 ft. Noticeably, both the observed top region and bottom region of the strikezone appear to be around a foot in height each, which is taller than the portion of the strikezone deemed the vertical middle.
+Because of the vague wording of the definition of the strike zone and the dependency the called strike zone has on the judgement of the umpire, I have included a plot displaying the X and Z coordinates of all high and low strikes relevant to this analysis. In this case, the x-axis refers to the horizontal distance of the pitch from the center of home plate (in ft) while the y-axis refers to the height of the pitch (in ft) as it crosses home plate. This plot helps us visualize the difference between high and low strikes as was observed in 2021. As there is no definitive cutoff for the top or bottom of the strike zone, understanding the observed heights of these strikes is important to understanding how pitch location may be related to balls in play. As is shown, the observed bottom of the strike zone appears to be slightly below 1.5 ft while the observed top of the strike zone appears to be slightly above 3.5 ft. Noticeably, both the observed top region and bottom region of the strike zone appear to be around a foot in height each, which is taller than the portion of the strike zone deemed the vertical middle.
 
 ```{r fig.height = 3}
 statcast_data_filtered %>%
@@ -113,9 +112,9 @@ statcast_data_filtered %>%
   theme_bw() +
   coord_equal() +
   labs(title = "Height of high strikes around 3 ft, \nheight of low strikes around 2 ft",
-       x = "Horizontal loction of pitch (ft from center of the strikezone)",
+       x = "Horizontal loction of pitch (ft from center of the strike zone)",
        y = "Vertical loction of pitch \n(ft from the ground)",
-       caption = "Visualizing the 2021 strikezone, locations of high and low strikes",
+       caption = "Visualizing the 2021 strike zone;\nlocations of high and low strikes",
        color = "Strike location")
   
 ```
@@ -157,7 +156,7 @@ sampled_statcast_data %>%
   coord_equal() +
   facet_wrap(~bb_type_format, nrow = 1) +
   labs(title = "Potential evidence of different relationships between \nBatted Ball Types and Vertical Pitch Location",
-       x = "Horizontal loction of pitch (ft from center of the strikezone)",
+       x = "Horizontal loction of pitch (ft from center of the strike zone)",
        y = "Vertical loction of pitch (ft from the ground)",
        caption = "Visualizing the pitch locations of different batted balls,\nusing random sample of 1249 observed low strikes and 751 observed high strikes",
        color = "Batted Ball (Success/Failure)")
@@ -200,7 +199,7 @@ logit_model <- glm(babip_value ~ zone_high_low + pitch_type + release_speed + st
 
 One assumption of a logistic regression is the independence of observations included in the data. This independence assumption is violated due to there being multiple observations for the same batter and multiple observations for the same pitcher. Although the scope of the data is also limited to only a single pitch per at-bat, there are still multiple observations per game and team. Situational elements like score, outs, weather, defense, etc. also potentially contribute to non-independence. Still, considering the mentality of players that one play should not affect the next and the relative randomness of sports data, I chose to continue with this model under the assumption that the data may not be completely dependent on each other. However, this violation of independence will affect confidence in my results, as is discussed in Limitations.
 
-The logistic model assumes that there is a linear relationship between the logit of the outcome and each predictor variable. To check the linearity assumption, empirical logit plots were observed to assess the relationships between the continuous predictor variables launch speed and release speed and the log odds of the outcome variable (Appendix E). In regard to the empirical logit plot for release speed, it appears that release speed is relatively linearly associated with the log odds of whether batted balls are successful or not. However, because the empirical logit plot for launch speed shows linearity being violated considering the presence of a strong "U" shape, it is evident that launch speed does not have a linear relationship with the log odds of whether batted balls are successful or not. To avoid this linearity violation, I instead include a transformed version of launch speed (launch speed$~^5$) as it has a much more linear relationship with the log odds of whether batted balls are successful or not.
+The logistic model assumes that there is a linear relationship between the logit of the outcome and each continuous predictor variable. To check the linearity assumption, empirical logit plots were observed to assess the relationships between the continuous predictor variables launch speed and release speed and the log odds of the outcome variable (Appendix E). In regard to the empirical logit plot for release speed, it appears that release speed is relatively linearly associated with the log odds of whether batted balls are successful or not. However, because the empirical logit plot for launch speed shows linearity being violated considering the presence of a strong "U" shape, it is evident that launch speed does not have a linear relationship with the log odds of whether batted balls are successful or not. To avoid this linearity violation, I instead include a transformed version of launch speed (launch speed$~^5$) as it has a much more linear relationship with the log odds of whether batted balls are successful or not.
 
 In assessing the fit of this model and its inferential purpose, I chose to examine the binned deviance residuals as a method of providing a rough idea of model fit (Appendix F). I decided to use deviance residuals rather than standardized residuals because the model is a generalized linear model (GLM) seeking to maximize the log likelihood function and thus deviance is a useful goodness-of-fit statistic. A small bin width of 0.01 was used to ensure many bins of average residuals vs average fitted value, allowing us to summarize our model fit while still showing more localized patterns in deviance residuals. Typically, we would expect these binned deviance residuals to be scattered around 0 to suggest good model fit. However, when examining this model, the binned deviance residuals show a oscillating pattern. Despite this just being one way to assess goodness-of-fit, it is important to acknowledge that there may be additional explanatory variables not included in the model that would help explain these patterns in deviance. Although this model is not a perfect fit, I will proceed to discuss the relationships suggested by the model, as they still offer some insight into my research question. Moving forward, however, it is necessary to keep in mind the presence of additional patterns unexplained by my model and how this potentially detracts from confidence in my results.
 
@@ -248,16 +247,16 @@ In examining the results of the logistic regression model (Table 1 above), I was
 
 However, I then proceeded to look closer into pitch location by looking at interaction effects between whether the pitch was a high or low strike and the type of batted ball. In doing so, I found evidence of a significant association between the pitch location and the batted ball being a ground ball, with all other variables held constant. That is, for pitches that are low strikes, batted balls that are ground balls are expected to have 1.905 [1.627, 2.230] times the odds of being a successful hit compared to those resulting from a high strike. That means that ground balls are associated with higher odds of a successful hit when the pitch is a low strike, but separately ground balls on low strikes do not seem to be associated with as great of a positive increase to the odds in comparison to other types of batted balls on low strikes. This is interesting because although the increase in the odds is expected according to my original justification of including this interaction effect, its comparison to the interaction effects of other types of batted balls on low strikes is not something I had expected.
 
-Among the variables I controlled for, I noticed that for high strikes, the type of batted ball has significant associations with the odds of a successful hit. Holding all other variables in the model constant, for high strikes resulting in line drives the odds of a successful hit are expected to increase by a factor of 14.353 ([12.603, 16.381]) compared to fly balls. This made sense as line drives are typically hard hit balls but lack the elevation that potentially allows the defense higher chances of making a catch. Holding all other variables in the model constant, for high strikes resulting in ground balls the odds of a successful hit are expected to increase by a factor of 4.146 ([3.643, 4.727]) compared to fly balls. I was slightly surprised by this relationship in comparison to fly balls because it suggests ground balls are more likely to result in a successful hit than a fly ball on high strikes. As fly balls are often the byproduct of failed homerun attempts, this association supports the idea that aiming to put balls in play rather than prioritizing homeruns may increase game action due to more successful balls in play. Holding all other variables in the model constant, for high strikes resulting in popups the odds of a successful hit are expected to decrease by a factor of 0.192 ([0.119, 0.292]) compared to fly balls. This is not surprising at all as popups are simply fly balls that don't reach the outfield, and with a higher density of infielders than outfielders in their respective areas, they are more likely to be caught.
+Among the variables I controlled for, I noticed that for high strikes, the type of batted ball has significant associations with the odds of a successful hit. Holding all other variables in the model constant, for high strikes resulting in line drives the odds of a successful hit are expected to increase by a factor of 14.353 ([12.603, 16.381]) compared to fly balls. This made sense as line drives are typically hard hit balls but lack the elevation that potentially allows the defense higher chances of making a catch. Holding all other variables in the model constant, for high strikes resulting in ground balls the odds of a successful hit are expected to increase by a factor of 4.146 ([3.643, 4.727]) compared to fly balls. I was slightly surprised by this relationship in comparison to fly balls because it suggests ground balls are more likely to result in a successful hit than a fly ball on high strikes. As fly balls are often the byproduct of failed home run attempts, this association supports the idea that aiming to put balls in play rather than prioritizing home runs may increase game action due to more successful balls in play. Holding all other variables in the model constant, for high strikes resulting in popups the odds of a successful hit are expected to decrease by a factor of 0.192 ([0.119, 0.292]) compared to fly balls. This is not surprising at all as popups are simply fly balls that don't reach the outfield, and with a higher density of infielders than outfielders in their respective areas, they are more likely to be caught.
 
 Interestingly, there was not evidence of statistically significant associations between the odds of a successful batted ball and pitcher related variables like the pitcher handedness, the release speed, or the type of pitch.
 
 
 # Discussion
 
-Given the current state of Major League Baseball and its strikezone, I had hypothesized that hitting low strikes would be associated with reduced odds of a successful batted ball. From the model, it was observed that this general trend was not supported. According to the model, in comparison to high strikes, batted balls on low strikes generally have increased odds of being a successful hit when controlling for other characteristics about the play, pitch, and batted ball, and interactions between vertical pitch location and batted ball type. The model also found evidence to support the intuition that different types of batted balls have different associations with the odds of a batted ball being successful. Interestingly, there was evidence that ground balls on high strikes were more likely to result in a successful batted ball that fly balls hit on high strikes, holding all else constant. As mentioned, because fly balls are often the byproduct of failed homerun attempts, this association supports the idea that aiming to put balls in play rather than prioritizing homeruns may increase game action due to more successful balls in play. Thus, this analysis seems to support both hitting low pitches and avoiding hitting popups and fly balls to increase game action for fans.
+Given the current state of Major League Baseball and its strike zone, I had hypothesized that hitting low strikes would be associated with reduced odds of a successful batted ball. From the model, it was observed that this general trend was not supported. According to the model, in comparison to high strikes, batted balls on low strikes generally have increased odds of being a successful hit when controlling for other characteristics about the play, pitch, and batted ball, and interactions between vertical pitch location and batted ball type. The model also found evidence to support the intuition that different types of batted balls have different associations with the odds of a batted ball being successful. Interestingly, there was evidence that ground balls on high strikes were more likely to result in a successful batted ball that fly balls hit on high strikes, holding all else constant. As mentioned, because fly balls are often the byproduct of failed home run attempts, this association supports the idea that aiming to put balls in play rather than prioritizing home runs may increase game action due to more successful balls in play. Thus, this analysis seems to support both hitting low pitches and avoiding hitting popups and fly balls to increase game action for fans.
 
-While these are interesting observations, it is important to consider that changing the strikezone or batting goals and swing behavior of players is not a simple or easy way to increase game action. For starters, shifting the strikezone would completely change pitching tendencies and pitching form and would require a gradual shift beginning with young players. Secondly, asking batters to change their mentalities and swings is not as simple as it sounds and is likely not a realistic expectations of professional athletes who have trained their whole lives and are likely fixed in their ways.
+While these are interesting observations, it is important to consider that changing the strike zone or batting goals and swing behavior of players is not a simple or easy way to increase game action. For starters, shifting the strike zone would completely change pitching tendencies and pitching form and would require a gradual shift beginning with young players. Secondly, asking batters to change their mentalities and swings is not as simple as it sounds and is likely not a realistic expectations of professional athletes who have trained their whole lives and are likely fixed in their ways.
 
 ## Limitations and Future Directions
 
@@ -269,7 +268,7 @@ Also, it is crucial to consider the assumption violations this model makes in re
 
 Additionally, by filtering for only batted ball events, I exclude the observations where high or low pitches result in a swinging or looking strike. While these instances don't necessarily pertain to my research question, they are relevant to considering the overall associations between high and low strikes and game action. In the future, I would like to also consider the associations between pitch location and strikeout probability as reducing strikeout rates would also be a method of potentially increasing game action.
 
-Separately, it would be interesting to consider the further implications of changing the strikezone such as how pitcher's pitch choice would change to best take advantage of a new strikezone.
+Separately, it would be interesting to consider the further implications of changing the strike zone such as how pitcher's pitch choice would change to best take advantage of a new strike zone.
 
 
 
@@ -285,7 +284,7 @@ Petti B, Gilani S (2022). baseballr: Acquiring and Analyzing Baseball Data. http
 
 Sarris, E. (2017, August 18). How would we increase balls in play? FanGraphs Baseball. Retrieved December 16, 2022, from https://blogs.fangraphs.com/how-would-we-increase-balls-in-play/ 
 
-Strikezone: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/rules/strike-zone 
+Strike Zone: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/rules/strike-zone 
 
 Three True Outcomes: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/idioms/three-true-outcomes
 
@@ -301,7 +300,7 @@ What are the pitch types generated from MLB Statcast for speed of pitch? Daktron
 
 The following are considered at-bat ending events:
 
-- Triples, fielded outs, doubles, grounding into double plays, strikeout double plays, sacrifice fly double plays, hitting into plays, hit by pitches, bunt foul tips, singles, strikeouts, sacrifice bunts, homeruns, sacrifice flies, catcher interference, other non-specified outs, sacrifice bunt double plays, foul tips, triple plays, fielders choices, double plays, fielders choice outs, field errors, force outs, and walks
+- Triples, fielded outs, doubles, grounding into double plays, strikeout double plays, sacrifice fly double plays, hitting into plays, hit by pitches, bunt foul tips, singles, strikeouts, sacrifice bunts, home runs, sacrifice flies, catcher interference, other non-specified outs, sacrifice bunt double plays, foul tips, triple plays, fielders choices, double plays, fielders choice outs, field errors, force outs, and walks
 
 
 ```{r}
